--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,19 @@ main {
     .hero-section h1 {
         font-size: 2rem;
     }
+
+    .copyright {
+        display: flex;
+        justify-self: center;
+        justify-content: center;
+        margin-bottom: 1rem;
+    }
+
+    .text-end {
+        display: flex;
+        justify-self: center;
+        justify-content: center;
+    }
 }
 
 /* 动画效果 */
